...
        android:layout_height="100dp"
        android:background="@android:drawable/picture_frame"
        android:contentDescription="@string/description_user_image"
        android:src="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:background="@color/white"/>

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:background="@color/white"/>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button_sign_in"
        android:background="@drawable/login_button_background"
        android:textColor="@color/white">

    </Button>

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:clickable="true"
...
